<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_background"
     >
    
    
    <ImageView 
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/login_logo_desc"/>
    
    <LinearLayout 
        android:id="@+id/login_input_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        >
        
        <EditText 
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/name"
            android:drawablePadding="6dp"
            android:hint="@string/login_username_hint"
            />
        
        <EditText 
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="6dp"
            android:inputType="textPassword"
            android:hint="@string/login_pwd_hint"
            />
    </LinearLayout>
    
    <Button 
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/common_btn_bg"
        android:text="@string/login_text"
        android:layout_below="@id/login_input_collection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:text="@string/forget_pwd_text"
        android:textSize="12sp"
        android:linksClickable="true"
        />

</RelativeLayout>
