<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:text="@string/forget_pwd_label" />

        <EditText
            android:id="@+id/email_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/forget_pwd_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/bgMain"
        android:gravity="center"
        android:text="@string/forget_pwd_submit"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forget_pwd_tip"
        android:textColor="@color/text_color_light"
        android:textSize="12sp" />

</LinearLayout>