<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/leave_detail_fragment_type" />

        <Spinner
            android:id="@+id/leaveType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:gravity="left|center_vertical" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/leave_detail_fragment_start_date" />

        <TextView
            android:id="@+id/leaveStartDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="left|center_vertical" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:textAlignment="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:text="@string/leave_detail_fragment_end_date" />

        <TextView
            android:id="@+id/leaveEndDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="left|center_vertical" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:text="@string/leave_detail_fragment_reason" />

        <EditText
            android:id="@+id/leaveReason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="16sp"
            android:gravity="start|top"
            android:background="@null"
            android:inputType="textMultiLine"
            android:lines="5" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/bgMain"
        android:textColor="@color/white"
        android:text="@string/leave_detail_fragment_submit"
        android:textAlignment="center" />

</LinearLayout>