<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/punch_detail_fragment_type" />

        <Spinner
            android:id="@+id/punchType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:gravity="left|center_vertical" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/punch_detail_fragment_location" /><TextView
            android:id="@+id/leaveStartDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="left|center_vertical" />

        <ImageView
            android:id="@+id/punchDetailRefreshBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:src="@drawable/ic_menu_refresh" />

    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/punch_detail_fragment_remark" />

        <EditText
            android:id="@+id/punchRemark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="16sp"
            android:gravity="start|top"
            android:background="@null"
            android:inputType="textMultiLine"
            android:lines="5" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/punchDetailSubmitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@color/bgMain"
        android:textColor="@color/white"
        android:text="@string/punch_detail_fragment_submit"
        android:textAlignment="center" />

</LinearLayout>